tests/golden/expected/door_too_many.stdout.txt
Compile error: tests/fixtures/door_too_many.lamp:13: type error: door "bad door" must connect exactly two rooms (found 3)
  13 | door bad_door:
    | ^
